# tree-docs

./: .gitignore  README.md  publish.sh  pyproject.toml
examples/: advanced.py  simple.py
tests/: test_generator.py
tree_docs/: __init__.py  cli.py  config.py  defaults.py  generator.py
tree_docs.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
